[package]
name = "testprog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.5.0"
pico-args = { version = "0.5.0", features = ["eq-separator", "combined-flags"] }
serde_json = "1.0"
serde = { version = "1", features = ["derive"] }
log = { version = "0.4.20", features = ["std"] }
nu-ansi-term = "0.49.0"
clap = { version = "4.4.6", features = ["derive"] }
